--- a/index.html
+++ b/index.html
@@ -110,9 +110,60 @@
     </nav>
   </header>
   
+  <header class="header">
+    <nav class="header__nav">
+      <div class="container">
+        <a href="" class="header__logo">
+          <img src="img/logo.svg" alt="">
+        </a>
+        <ul class="header__list">
+          <li class="header__li">
+            <a href="#" class="header__link">HOME</a>
+          </li>
+          <li class="header__li">
+            <a href="#" class="header__link">PAGES</a>
+          </li>
+          <li class="header__li">
+            <a href="#" class="header__link">
+              PORTFOLIO
+              <img src="img/arrow.svg" alt="">
+            </a>
+            <ul class="header__dropdown">
+              <li class="header__dropdown-li">
+                <a href="#" class="header__dropdown-link">SHOP</a>
+              </li>
+              <li class="header__dropdown-li">
+                <a href="#" class="header__dropdown-link ">FASHION</a>
+              </li>
+              <li class="header__dropdown-li">
+                <a href="#" class="header__dropdown-link">GALLERY</a>
+              </li>
+            </ul>
+          </li>
+          <li class="header__li">
+            <a href="" class="header__link">BLOG</a>
+          </li>
+          <li class="header__li">
+            <a href="" class="header__link">ABOUT</a>
+          </li>
+          <li class="header__li">
+            <a href="" class="header__link">SHORTCODES</a>
+          </li>
+        </ul>
+        <form action="" class="header__form">
+          <input type="text" placeholder="Search">
+          <button>
+            <img src="img/search.svg" alt="">
+          </button>
+        </form>
+      </div>
+    </nav>
+  </header>
+  
   <main class="main">
     <section class="intro">
       <div class="container">
+        <h1 class="intro__title">Amazing Shop Layouts</h1>
         <h1 class="intro__title">Amazing Shop Layouts</h1>
         <p class="intro__text">Grayson Collection</p>
         <a href="" class="intro__btn btn">SHOP NOW</a>
